# cjtoolkit-structured-validator

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: rust.yml
cjtoolkit-structured-validator/: Cargo.toml
cjtoolkit-structured-validator/src/: lib.rs
cjtoolkit-structured-validator/src/base/: number_rules.rs  string_rules.rs
cjtoolkit-structured-validator/src/base/date_time/: data.rs  rules.rs
cjtoolkit-structured-validator/src/common/: flag_error.rs  locale.rs  string_validator.rs  validation_check.rs  validation_collector.rs
cjtoolkit-structured-validator/src/types/: description.rs  email.rs  mod.rs  name.rs  password.rs  url.rs  username.rs
cjtoolkit-structured-validator/src/types/numbers/: float.rs  integer.rs  unsigned.rs
cjtoolkit-structured-validator/src/types/times_chrono/: date.rs  date_time.rs  mod.rs  naive_date_time.rs  time.rs
cjtoolkit-structured-validator/src/types/times_humantime/: mod.rs
examples/: Cargo.toml
examples/fluent-integration/: Cargo.toml  README.md
examples/fluent-integration/src/: main.rs
examples/fluent-integration/src/_locale/: french.ftl
examples/multiple-choice/: Cargo.toml  README.md
examples/multiple-choice/src/: main.rs
examples/poem-i18n-integration/: Cargo.toml
examples/poem-i18n-integration/src/: main.rs
examples/poem-i18n-integration/src/_locale/: english.ftl
examples/validate-with-regexp/: Cargo.toml  README.md
examples/validate-with-regexp/src/: main.rs
src/: lib.rs
src/base/: mod.rs  number_rules.rs  string_rules.rs
src/base/date_time/: data.rs  mod.rs  rules.rs
src/common/: flag_error.rs  locale.rs  mod.rs  string_validator.rs  validation_check.rs  validation_collector.rs
src/types/: description.rs  email.rs  mod.rs  name.rs  password.rs  url.rs  username.rs
src/types/numbers/: float.rs  integer.rs  mod.rs  unsigned.rs
src/types/times_chrono/: date.rs  date_time.rs  mod.rs  naive_date_time.rs  time.rs
