[package]
name = "cjtoolkit-structured-validator"
version = "0.1.0"
edition = "2024"

[features]
full = ["url", "email"]
url = ["dep:url"]
email = ["dep:email-address-parser"]

[dependencies]
unicode-segmentation = "1.12.0"
thiserror = "2.0.16"
blake3 = "1.8.2"

url = { version = "2.5.7", optional = true }
email-address-parser = { version = "2.0.0", optional = true }

[dev-dependencies]
# for testing async part
tokio = { version = "1.47.1", features = ["full"] }