[workspace]
resolver = "3"
members = [
    "fluent-integration",
    "multiple-choice", "poem-i18n-integration",
    "validate-with-regexp"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
cjtoolkit-structured-validator = { path = "../cjtoolkit-structured-validator" }
